# social-distancing-sim

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  fastapi.dockerfile  gradio.dockerfile  pyproject.toml  requirements.txt  requirements_agents.txt  run.sh  run_fastapi_app.sh  run_gradio_app.sh  setup.py  sonar-project.properties
.github/workflows/: docker_push.yml  publish.yml  pythonpackage.yml  run_precommit.yml  run_tests.yml  sonar_cloud.yml
app/: sim_endpoint.py
app/gradio/: sim_app.py  simple_app.py  single_population.py
scripts/: __init__.py  compare_basic_agents.py  compare_testing_rate.py  compare_two_diseases_immunity.py  compare_two_diseases_immunity_small.py  compare_two_pop_testing_rate.py  compare_two_populations.py  run_simulation_with_agent.py  run_single_population.py  stats_compare_basic_agents.py  stats_compare_multi_agents.py  stats_compare_rl_to_baseline.py  stats_run_single_population.py  train_and_evaluate_untargeted_dqn.py  train_deep_q_learner.py  train_linear_q_learner.py  visual_compare_basic_agents.py  visual_compare_basic_agents_small.py  visual_compare_multi_agents.py  visual_compare_policy_agents.py  visual_compare_rl_agents.py  visual_compare_testing_rate.py  visual_compare_two_diseases_immunity.py  visual_compare_two_diseases_immunity_small.py  visual_compare_two_pop_testing_rate.py  visual_compare_two_populations.py  visual_run_simulation_with_agent.py  visual_run_single_population.py  visual_run_single_population_long.py
social_distancing_sim/: __init__.py
social_distancing_sim/agent/: __init__.py  action_space.py  agent.py  agent_base.py  dummy_agent.py  isolation_agent.py  learning_agent_base.py  non_learning_agent_base.py  random_agent.py  vaccination_agent.py
social_distancing_sim/agent/basic_agents/: dummy_agent.py  isolation_agent.py  masking_agent.py  random_agent.py  treatment_agent.py  (+1 more)
social_distancing_sim/app/: sim_endpoint.py
social_distancing_sim/disease/: disease.py
social_distancing_sim/environment/: __init__.py  action_space.py  disease.py  environment.py  environment_plotting.py  graph.py  history.py  observation_space.py  scoring.py  status.py
social_distancing_sim/gym/: gym_env.py  gym_templates.py
social_distancing_sim/population/: graph.py  healthcare.py  history.py  observation_space.py  population.py  population_templates.py  scoring.py  status.py
social_distancing_sim/sim/: __init__.py  multi_sim.py  sim.py  sim_templates.py
social_distancing_sim/templates/: distanced.py  pop_746.py  small.py  template_base.py  undistanced.py
(+80 files in other folders)
