[build-system]
requires = ["setuptools>=61.2", "wheel"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["social_distancing_sim*"]
exclude = ["docs*", "tests*", "images*"]

[project]
name = "social_distancing_sim"
requires-python = ">= 3.9"
version = "0.11.2"
description = ""
authors = [
    {name = "Gareth Jones ", email = "garethgithub@gmail.com"}
]
readme = "README.MD"
classifiers=[
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
        "networkx",
        "numpy<=1.23",
        "matplotlib",
        "imageio",
        "dataclasses",
        "seaborn<=0.13",
        "tqdm",
        "joblib",
        "pandas",
        "mlflow",
        "gym>=0.26",
        "uvicorn",
        "aiofiles",
    ]

[project.optional-dependencies]
rlk = ["reinforcement-learning-keras==0.5.1",]
fastapi = ["fastapi",]
gradio = ["gradio",]
dev = ["pytest", "pre-commit"]

[project.urls]
Homepage = "https://github.com/garethjns/social-distancing-sim"
Repository = "https://github.com/garethjns/social-distancing-sim"
